// Copyright 2022 Hayo van Loon
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not
// use this file except in compliance with the License. You may obtain a copy of
// the License at
//
//        http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
// License for the specific language governing permissions and limitations under
// the License.

syntax = "proto3";

package hayoweb.research.serialisation.v1;

option go_package = "github.com/HayoVanLoon/genproto/research/serialisation/v1;serialisation";


// Simplified invoice
message Invoice {
  string invoicee = 20;
  Address address = 21;

  message InvoiceLine {
    string product_name = 1;
    float price = 2;
    int32 quantity = 3;
  }

  repeated InvoiceLine invoice_lines = 30;
  float subtotal = 40;
  float tax_pct = 41;
  float total = 42;
}

message Address {
  int32 house_number = 1;
  string street = 2;
  string postal_code = 3;
  string country = 4;
}
